hw 4: Fixed compact() in DiskStorage.java